kds, cashier & update
