# hotelOrderFrontend/src/openapi/openapi.json
@@ -102,20 +102,11 @@
                         }
                     },
                     {
-                        "name": "newStatus",
+                        "name": "status",
                         "in": "query",
                         "required": true,
                         "schema": {
-                            "type": "string",
-                            "enum": [
-                                "PENDING",
-                                "OnPROCESS",
-                                "READY",
-                                "SERVED",
-                                "COMPLETED",
-                                "CANCELLED",
-                                "BillREADY"
-                            ]
+                            "type": "string"
                         }
                     }
                 ],
@@ -147,24 +138,16 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "string",
-                                "enum": [
-                                    "PENDING",
-                                    "READY",
-                                    "PROCESSED",
-                                    "CANCELLED"
-                                ]
-                            }
-                        }
-                    },
-                    "required": true
-                },
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1086,81 +1069,12 @@
                 }
             }
         },
-        "/orders/served": {
+        "/orders/verified-or-onprocess": {
             "get": {
                 "tags": [
                     "orders"
                 ],
-                "operationId": "getServedOrders",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/OrderResponse"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/orders/ready": {
-            "get": {
-                "tags": [
-                    "orders"
-                ],
-                "operationId": "getReadyOrders",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/OrderResponse"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/orders/pending": {
-            "get": {
-                "tags": [
-                    "orders"
-                ],
-                "operationId": "getPendingOrders",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/OrderResponse"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/orders/on-process": {
-            "get": {
-                "tags": [
-                    "orders"
-                ],
-                "operationId": "getOnProcessOrders",
+                "operationId": "getVerifiedOrOnProcessOrders",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1451,12 +1365,22 @@
                 }
             }
         },
-        "/orders/bill-ready": {
+        "/orders/by-status": {
             "get": {
                 "tags": [
                     "orders"
                 ],
-                "operationId": "getBillReadyOrders",
+                "operationId": "getOrdersByStatus",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1942,6 +1866,39 @@
                     "items"
                 ],
                 "operationId": "getAvailableItems",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ItemResponse"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/items/available/category/{category-id}": {
+            "get": {
+                "tags": [
+                    "items"
+                ],
+                "operationId": "getAvailableItemsByCategory",
+                "parameters": [
+                    {
+                        "name": "category-id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -2696,13 +2653,7 @@
                         "type": "string"
                     },
                     "status": {
-                        "type": "string",
-                        "enum": [
-                            "PENDING",
-                            "READY",
-                            "PROCESSED",
-                            "CANCELLED"
-                        ]
+                        "type": "string"
                     }
                 }
             },
@@ -2745,12 +2696,14 @@
                         "type": "string",
                         "enum": [
                             "PENDING",
+                            "VERIFIED",
                             "OnPROCESS",
                             "READY",
                             "SERVED",
                             "COMPLETED",
-                            "CANCELLED",
-                            "BillREADY"
+                            "CANCELED",
+                            "BillREADY",
+                            "BillREQUEST"
                         ]
                     }
                 }
